--- a/index.html
+++ b/index.html
@@ -671,9 +671,9 @@
                     <h5>Informasi</h5>
                     <ul class="list-unstyled">
                         <li><a href="https://alhidayahsumanik.com" target="_blank">Website Pondok</a></li>
-                        <li><a href="https://alhidayahsumanik.com/akhwat" target="_blank">Pondok Akhwat</a></li>
-                        <li><a href="https://alhidayahsumanik.com/ppdb" target="_blank">PPDB 2026</a></li>
-                        <li><a href="https://alhidayahsumanik.com/dauroh" target="_blank">Dauroh</a></li>
+                        <li><a href="https://maps.app.goo.gl/WkRNeYZ2M5vvxZhT7" target="_blank">Pondok Akhwat</a></li>
+                        <li><a href="#" target="_blank">PPDB 2026</a></li>
+                        <li><a href="#" target="_blank">Dauroh</a></li>
                     </ul>
                 </div>
                 
