--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 <div class="col-md-4 mb-4 mb-md-0 footer-info">
                     <h5>Informasi</h5>
                     <ul class="list-unstyled">
-                        <li><a href="https://alhidayahsumanik.com" target="_blank">Website Pondok</a></li>
+                        <li><a href="https://www.alhidayahsumanik.id" target="_blank">Website Pondok</a></li>
                         <li><a href="https://maps.app.goo.gl/WkRNeYZ2M5vvxZhT7" target="_blank">Pondok Akhwat</a></li>
                         <li><a href="#" target="_blank">PPDB 2026</a></li>
                         <li><a href="#" target="_blank">Dauroh</a></li>
