--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <div class="col-lg-8">
                     <div class="donation-box">
                         <h2 class="mb-4">Mari Berdonasi Untuk Kemakmuran Masjid</h2>
-                        <p><i>"...Dan tolong-menolonglah kamu dalam (mengerjakan) kebajikan dan takwa,"</i> </p></br><b>(Al Maidah:2)</b></p>
+                        <p><i>"...Dan tolong-menolonglah kamu dalam (mengerjakan) kebajikan dan taqwa,"</i> </p><b>(QS. Al Maidah:2)</b></p>
                         <p>Donasi Anda akan digunakan untuk operasional, kegiatan dakwah, dan pengembangan fasilitas masjid.</p>
                         
                         <div class="mt-5">
@@ -565,6 +565,7 @@
                                     <p><strong>Bank Syariah Indonesia (BSI)</strong></p>
                                     <p>No. Rekening: 724 227 2107</p>
                                     <p>Atas Nama: KAMPUNG QURAN BAG DONASI</p>
+                                    <p>Konfirmasi: 0852-1031-0334</p>
                                 </div>
                             </div>
                         </div>
@@ -592,7 +593,7 @@
                         <address>
                             <p><i class="fas fa-map-marker-alt me-2 text-primary"></i> Jl. Raya Sumanik Kec. Salimpaung</p>
                             <p><i class="fas fa-city me-2 text-primary"></i> Kab. Tanah Datar, Sumatera Barat</p>
-                            <p><i class="fas fa-phone-alt me-2 text-primary"></i> 0852-1031-033</p>
+                            <p><i class="fas fa-phone-alt me-2 text-primary"></i> 0852-1031-0334</p>
                         </address>
                         <a href="https://maps.google.com" target="_blank" class="btn btn-primary mt-3">
                             <i class="fas fa-map-marked-alt me-2"></i> Buka di Google Maps
