--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <div class="kajian-info">
                         <div class="kajian-day">Ahad</div>
                         <div class="kajian-time">Ba'da Maghrib - Isya</div>
-                        <div class="kajian-title">Ringkasan Pengagungan Ilmu</div>
+                        <div class="kajian-title">Hilyah Tholibul 'Ilmu</div>
                         <div class="kajian-ustadz">Ust. Ahmad Ridona Pane, M.Pd</div>
                     </div>
                 </div>
