--- a/index.html
+++ b/index.html
@@ -290,33 +290,33 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>1 Agustus 2025</td>
-                            <td>Menunggu Informasi Selanjutnya</td>
-                            <td>Ust. Abu Abdillah, Lc, S.Pd</td>
+                            <td>5 September 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Ali Akbar</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>8 Agustus 2025</td>
-                            <td>Menunggu Informasi Selanjutnya</td>
-                            <td>Ust. Abu Zaid Soni</td>
+                            <td>12 September 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Zulfikar, Lc</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>15 Agustus 2025</td>
-                            <td>Menunggu Informasi Selanjutnya</td>
+                            <td>19 September 2025</td>
+                            <td>Tematik</td>
                             <td>Ust. Ahmad Kamal, B.A</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>22 Agustus 2025</td>
-                            <td>Menunggu Informasi Selanjutnya</td>
-                            <td>Ust. Rasyid Al Jundi, B.A</td>
+                            <td>26 September 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Fildia Usma Yusuf, S.H</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>29 Agustus 2025</td>
-                            <td>Menunggu Informasi Selanjutnya</td>
-                            <td>Ust. Ahmad Daniel, Lc. M.A</td>
+                            <td>3 Oktober 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Ahmad Ridona Pane, M.Pd</td>
                         </tr>
                     </tbody>
                 </table>
@@ -326,7 +326,7 @@
                 <div class="row">
                     <div class="col-md-4 text-center mb-3 mb-md-0">
                         <h4>Waktu Jum'at</h4>
-                        <p>11.30 - 13.00 WIB</p>
+                        <p>12.20 - 13.00 WIB</p>
                     </div>
                     <div class="col-md-4 text-center mb-3 mb-md-0">
                         <h4>Lokasi</h4>
@@ -623,7 +623,7 @@
                         </div>
                         <div>
                             <h4>WhatsApp</h4>
-                            <p><a href="https://wa.me/+6285210310334" class="text-decoration-none">+62 852-1031-0334</a></p>
+                            <p><a href="https://wa.me/+6285210310334" class="text-decoration-none">0852-1031-0334</a></p>
                             <small>Klik untuk chat langsung</small>
                         </div>
                     </div>
