--- a/index.html
+++ b/index.html
@@ -290,33 +290,33 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>5 September 2025</td>
+                            <td>3 Oktober 2025</td>
                             <td>Tematik</td>
-                            <td>Ust. Ali Akbar</td>
+                            <td>Ust. Ahmad Ridona Pane, M.Pd</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>12 September 2025</td>
+                            <td>10 Oktober 2025</td>
                             <td>Tematik</td>
-                            <td>Ust. Zulfikar, Lc</td>
+                            <td>Ust. Abu Zaid Soni</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>19 September 2025</td>
+                            <td>17 Oktober 2025</td>
                             <td>Tematik</td>
                             <td>Ust. Ahmad Kamal, B.A</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>26 September 2025</td>
+                            <td>24 Oktober 2025</td>
                             <td>Tematik</td>
-                            <td>Ust. Fildia Usma Yusuf, S.H</td>
+                            <td>Ust.Rasyid Al Jundi, B.A</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>3 Oktober 2025</td>
+                            <td>31 Oktober 20255</td>
                             <td>Tematik</td>
-                            <td>Ust. Ahmad Ridona Pane, M.Pd</td>
+                            <td>Ust. Ahmad Daniel, Lc. M.A</td>
                         </tr>
                     </tbody>
                 </table>
@@ -556,15 +556,15 @@
                     <div class="donation-box">
                         <h2 class="mb-4">Mari Berdonasi Untuk Kemakmuran Masjid</h2>
                         <p><i>"...Dan tolong-menolonglah kamu dalam (mengerjakan) kebajikan dan taqwa,"</i> </p><b>(QS. Al Maidah:2)</b></p>
-                        <p>Donasi Anda akan digunakan untuk operasional, kegiatan dakwah, dan pengembangan fasilitas masjid.</p>
+                        <p>Donasi Anda akan digunakan untuk operasional, kegiatan dakwah, dan pengembangan masjid.</p>
                         
                         <div class="mt-5">
                             <h4>Informasi Rekening Donasi</h4>
                             <div class="d-flex justify-content-center mt-4">
                                 <div class="text-start">
                                     <p><strong>Bank Syariah Indonesia (BSI)</strong></p>
-                                    <p>No. Rekening: 724 227 2107</p>
-                                    <p>Atas Nama: KAMPUNG QURAN BAG DONASI</p>
+                                    <p>No. Rekening: 7321755277</p>
+                                    <p>Atas Nama: KAMPUNG QUR AN OPR MASJID ALHIDAYAH</p>
                                     <p>Konfirmasi: 0852-1031-0334</p>
                                 </div>
                             </div>
