--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     <section id="lokasi" class="section">
         <div class="container">
             <h2 class="section-title">Lokasi Masjid</h2>
-            <p class="section-subtitle">Temukan lokasi Masjid Al-Hidayah dengan mudah</p>
+            <p class="section-subtitle">Temukan lokasi Masjid Al-Hidayah Sumanik dengan mudah</p>
             
             <div class="row">
                 <div class="col-lg-6 mb-4 mb-lg-0">
