--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <div class="kajian-info">
                         <div class="kajian-day">Senin</div>
                         <div class="kajian-time">Ba'da Maghrib - Isya</div>
-                        <div class="kajian-title">Sirah Nabawiyah</div>
+                        <div class="kajian-title">Sunnah-Sunnah Sehari Semalam</div>
                         <div class="kajian-ustadz">Ust. Ahmad Kamal, B.A</div>
                     </div>
                 </div>
