--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <div class="hero-overlay">
             <div class="hero-content">
-                <h1 class="hero-title">Masjid Al Hidayah</h1>
+                <h1 class="hero-title">Masjid Al Hidayah Sumanik</h1>
                 <p class="hero-subtitle">Pusat Ibadah, Ilmu dan Dakwah Umat</p>
                 <div class="hero-buttons">
                     <a href="#kajianrutin" class="btn hero-btn btn-kajian">Lihat Jadwal Kajian</a>
