--- a/index.html
+++ b/index.html
@@ -290,33 +290,33 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>3 Oktober 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Ahmad Ridona Pane, M.Pd</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>10 Oktober 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Abu Zaid Soni</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>17 Oktober 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Ahmad Kamal, B.A</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>24 Oktober 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust.Rasyid Al Jundi, B.A</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>31 Oktober 20255</td>
+                            <td>31 Oktober 2025</td>
                             <td>Tematik</td>
                             <td>Ust. Ahmad Daniel, Lc. M.A</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>7 Nopember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Ali Akbar</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>14 Nopember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Zulfikar, Lc</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>21 Nopember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust.Ahmad Kamal, B.A</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>28 Nopember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Fildia Usma Yusuf, S.H</td>
                         </tr>
                     </tbody>
                 </table>
