--- a/index.html
+++ b/index.html
@@ -290,12 +290,6 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>31 Oktober 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Ahmad Daniel, Lc. M.A</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
                             <td>7 Nopember 2025</td>
                             <td>Tematik</td>
                             <td>Ust. Ali Akbar</td>
@@ -318,6 +312,12 @@
                             <td>Tematik</td>
                             <td>Ust. Fildia Usma Yusuf, S.H</td>
                         </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>5 Desember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Abu Abdillah, Lc, S.Pd</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -326,7 +326,7 @@
                 <div class="row">
                     <div class="col-md-4 text-center mb-3 mb-md-0">
                         <h4>Waktu Jum'at</h4>
-                        <p>12.20 - 13.00 WIB</p>
+                        <p>12:15 - 1:40 WIB</p>
                     </div>
                     <div class="col-md-4 text-center mb-3 mb-md-0">
                         <h4>Lokasi</h4>
