--- a/index.html
+++ b/index.html
@@ -290,24 +290,6 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>7 Nopember 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Ali Akbar</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>14 Nopember 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Zulfikar, Lc</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>21 Nopember 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Ahmad Kamal, B.A</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
                             <td>28 Nopember 2025</td>
                             <td>Tematik</td>
                             <td>Ust. Fildia Usma Yusuf, S.H</td>
@@ -317,6 +299,24 @@
                             <td>5 Desember 2025</td>
                             <td>Tematik</td>
                             <td>Ust. Abu Abdillah, Lc, S.Pd</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>12 Desember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Abu Zaid Soni</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>19 Desember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Ahmad Kamal, B.A</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>26 Desember 2025</td>
+                            <td>Tematik</td>
+                            <td>Ust. Rasyid Al Jundi, B.A</td>
                         </tr>
                     </tbody>
                 </table>
