--- a/index.html
+++ b/index.html
@@ -290,33 +290,33 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>28 Nopember 2025</td>
+                            <td>2 Januari 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Fildia Usma Yusuf, S.H</td>
+                            <td>Ust. Ali Akbar, S.H.I</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>5 Desember 2025</td>
+                            <td>9 Januari 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Abu Abdillah, Lc, S.Pd</td>
+                            <td>Ust. Zulfikar, Lc</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>12 Desember 2025</td>
-                            <td>Tematik</td>
-                            <td>Ust. Abu Zaid Soni</td>
-                        </tr>
-                        <tr>
-                            <td>Jum'at</td>
-                            <td>19 Desember 2025</td>
+                            <td>16 Januari 2026</td>
                             <td>Tematik</td>
                             <td>Ust. Ahmad Kamal, B.A</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>26 Desember 2025</td>
+                            <td>23 Januari 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Rasyid Al Jundi, B.A</td>
+                            <td>Ust. Firdaus Ashry, M.H</td>
+                        </tr>
+                        <tr>
+                            <td>Jum'at</td>
+                            <td>30 Januari 2026</td>
+                            <td>Tematik</td>
+                            <td>Ust. Ahmad Daniel, Lc. M.A</td>
                         </tr>
                     </tbody>
                 </table>
