--- a/index.html
+++ b/index.html
@@ -391,33 +391,33 @@
                     <tbody>
                         <tr>
                             <td>Jum'at</td>
-                            <td>2 Januari 2026</td>
+                            <td>6 Februari 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Ali Akbar, S.H.I</td>
+                            <td>Ust. Imam Safri, M.Pd</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>9 Januari 2026</td>
+                            <td>13 Februari 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Zulfikar, Lc</td>
+                            <td>Ust. Abu Zaid Soni</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>16 Januari 2026</td>
+                            <td>20 Februari 2026</td>
                             <td>Tematik</td>
                             <td>Ust. Ahmad Kamal, B.A</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>23 Januari 2026</td>
+                            <td>27 Februari 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Firdaus Ashry, M.H</td>
+                            <td>Ust. Rasyid Al Jundi, B.A</td>
                         </tr>
                         <tr>
                             <td>Jum'at</td>
-                            <td>30 Januari 2026</td>
+                            <td>3 Maret 2026</td>
                             <td>Tematik</td>
-                            <td>Ust. Ahmad Daniel, Lc. M.A</td>
+                            <td>Ust. Ali Akbar, S.H.I</td>
                         </tr>
                     </tbody>
                 </table>
@@ -435,7 +435,7 @@
                     </div>
                     <div class="col-md-4 text-center">
                         <h4>Kapasitas</h4>
-                        <p>300 Jama'ah</p>
+                        <p>>300 Jama'ah</p>
                     </div>
                 </div>
             </div>
